code review comments

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -30,6 +30,10 @@ form {
 }
 
 .mover {
+  -webkit-transform: translateZ(0);
+   -moz-transform: translateZ(0);
+   -ms-transform: translateZ(0);
+   -o-transform: translateZ(0);
   transform: translateZ(0);
   backface-visibility: hidden;
   position: fixed;
